# SCGuildTrials

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
apps-script/: Code.gs  README.md
research/: item-stats.json  item-stats.md  trial-messages.md  trial-tabs.md
src/: __init__.py  build.py  config.py  draw.py  optimize_bakeoff.py  optimizer.py  processor.py  reader.py  scraper.py  signup.py  trials.py
tests/: test_optimizer.py  test_reader.py  test_scraper.py  test_signup.py  test_trials.py
